--- a/css/style.css
+++ b/css/style.css
@@ -576,30 +576,6 @@ img {
   .breadcrumbs__item a:focus {
     color: #cacaca; }
 
-.main-header {
-  display: table;
-  content: "";
-  clear: both;
-  height: 278px;
-  width: 320px;
-  background-color: #f9f9f9;
-  background: url("../img/hero-mobile@1x.jpg") no-repeat center -19px; }
-  .main-header--color {
-    height: 177px;
-    background: #f1f1f1; }
-  .main-header__img {
-    background-color: #f9f9f9f;
-    width: 100%;
-    height: auto; }
-  .main-header__title {
-    width: 260px;
-    padding: 64px 0 0;
-    font-size: 27px;
-    line-height: 32px;
-    margin: 0 auto;
-    font-weight: 700;
-    text-align: center; }
-
 .products-links {
   margin: 0;
   display: table;
@@ -3845,7 +3821,8 @@ svg {
   @media screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 1.5dppx) {
 
   .main-header {
-    background-image: url("../img/hero-desktop@2x.jpg"); } }
+    background-image: url("../img/hero-desktop@2x.jpg");
+    background-size: 100%; } }
   @media (min-width: 1200px) {
 
   .keyword-h2 {
@@ -4994,8 +4971,36 @@ svg {
 
   .main-nav--nojs .main-nav__list,
   .main-nav--nojs .main-nav__user {
-    display: block; } }
-  @media screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-resolution: 144dpi), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
+    display: block; }
 
   .main-header {
-    background-image: url("../img/hero-mobile@2x.jpg"); } }
+    display: table;
+    content: "";
+    clear: both;
+    height: 278px;
+    width: 320px;
+    background-color: #f9f9f9;
+    background: url("../img/hero-mobile@1x.jpg") no-repeat center -19px; }
+
+  .main-header--color {
+    height: 177px;
+    background: #f1f1f1; }
+
+  .main-header__img {
+    background-color: #f9f9f9f;
+    width: 100%;
+    height: auto; }
+
+  .main-header__title {
+    width: 260px;
+    padding: 64px 0 0;
+    font-size: 27px;
+    line-height: 32px;
+    margin: 0 auto;
+    font-weight: 700;
+    text-align: center; } }
+  @media screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 1.5dppx) {
+
+  .main-header {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px 373px; } }
