--- a/css/style.css
+++ b/css/style.css
@@ -2318,7 +2318,7 @@ svg {
 
   .page-header__logo {
     width: 165px;
-    margin: 0 0 0 22px;
+    margin: 0 0 0 40px;
     -ms-flex-order: 1;
     order: 1; }
 
@@ -2473,11 +2473,6 @@ svg {
   .main-header__title--size {
     margin: 43px auto; }
 
-  .main-header--color {
-    position: relative;
-    height: 186px;
-    background: #f1f1f1; }
-
   .main-header__img {
     width: 100%;
     height: auto; }
@@ -2485,6 +2480,13 @@ svg {
   .main-header__img img {
     width: 100%;
     height: auto; }
+
+  .main-header--color {
+    position: relative;
+    height: 186px; }
+
+  .main-header.main-header--color {
+    background: #f1f1f1; }
 
   .products-links {
     position: relative;
@@ -3822,7 +3824,7 @@ svg {
 
   .main-header {
     background-image: url("../img/hero-desktop@2x.jpg");
-    background-size: 100%; } }
+    background-size: 1150px auto; } }
   @media (min-width: 1200px) {
 
   .keyword-h2 {
@@ -3858,7 +3860,7 @@ svg {
     border-bottom: 1px solid #ececec; }
 
   .page-header__logo {
-    margin: 0px 0 0 -32px;
+    margin: 0 0 0 -17px;
     -ms-flex-order: 2;
     order: 2;
     height: 80px; }
@@ -3902,7 +3904,7 @@ svg {
     order: 1; }
 
   .main-nav .main-nav__list li.main-nav__item {
-    padding: 0 0 0 41px; }
+    padding: 0 0 0 30px; }
 
   .main-nav .main-nav__list li.main-nav__item:first-child {
     padding: 0 30px 0 0;
@@ -3945,7 +3947,7 @@ svg {
 
   .main-nav__item--basket {
     position: relative;
-    margin-right: 50px; }
+    margin-right: 43px; }
 
   .main-nav__item--basket-svg {
     top: 30px;
@@ -4006,12 +4008,14 @@ svg {
     top: 100px; }
 
   .main-header--color {
-    height: 269px;
-    background: #f1f1f1; }
+    height: 269px; }
 
   .main-header__img {
     width: 100%;
     height: auto; }
+
+  .main-header.main-header--color {
+    background: #f1f1f1; }
 
   .products-links {
     width: 100%;
@@ -4982,10 +4986,6 @@ svg {
     background-color: #f9f9f9;
     background: url("../img/hero-mobile@1x.jpg") no-repeat center -19px; }
 
-  .main-header--color {
-    height: 177px;
-    background: #f1f1f1; }
-
   .main-header__img {
     background-color: #f9f9f9f;
     width: 100%;
@@ -4998,7 +4998,13 @@ svg {
     line-height: 32px;
     margin: 0 auto;
     font-weight: 700;
-    text-align: center; } }
+    text-align: center; }
+
+  .main-header--color {
+    height: 177px; }
+
+  .main-header.main-header--color {
+    background: #f1f1f1; } }
   @media screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), screen and (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 1.5dppx) {
 
   .main-header {
